tests/invalid/MethodCall_Invalid_4.whiley
function f(int y) -> int:
    return get(y)

method get(int z) -> int:
    return z
